# ursa

./: Cargo.toml  LICENSE  README.md
src/: app.rs  main.rs  tmux.rs  ui.rs
