[package]
name = "ursa"
version = "0.1.0"
edition = "2021"
description = "A fast, keyboard-driven tmux session manager"
license = "MIT"
repository = "https://github.com/archie-bi/ursa"
keywords = ["tmux", "tui", "terminal", "session-manager"]
categories = ["command-line-utilities"]

[[bin]]
name = "ursa"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
color-eyre = "0.6"
